--- a/UniversityWebApp/Views/Shared/_Layout.cshtml
+++ b/UniversityWebApp/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         @if (session != null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Hello: @session.Username</a>
+                                <a class="nav-link" href="@Url.Action("MyProfile","Account")">Hello: @session.Username</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Logout","Account", new { area =""})">Log out</a>
