--- a/UniversityWebApp/Views/Account/Index.cshtml
+++ b/UniversityWebApp/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ModelPr.ModelViews.AccountModel
+﻿@model ModelPr.ModelViews.UserLogin
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
 @{
@@ -46,7 +46,7 @@
                         </label>
                     </div>
                     <div class="col-lg-7 text-center text-lg-right" style="margin-right:-5px">
-                        <span class=""><a href="#">You forgot your password?</a></span>
+                        <span class=""><a href="@Url.Action("ResetPass","Account", new { area =""})">You forgot your password?</a></span>
                     </div>
                 </div>
                 <div class="form-group" style="">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="form-group text-center" style="">
                     <label>You don't have an account?</label>
-                    <span><a href="#">Click here to register</a></span>
+                    <span><a href="@Url.Action("Registry","Account", new { area =""})">Click here to register</a></span>
                 </div>
             </div>
         </div>
