--- a/UniversityWebApp/Views/Shared/_Layout.cshtml
+++ b/UniversityWebApp/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Registry","Account", new { area =""})">Sign Up</a>
+                                <a class="nav-link" href="@Url.Action("Registry","Account", new { area =""})">(Test) Sign Up</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Index","Account", new { area =""})">Log In</a>
