--- a/UniversityWebApp/Areas/QAManager/Views/Shared/_Layout.cshtml
+++ b/UniversityWebApp/Areas/QAManager/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Index","CateGrIdea", new { area ="QAManager"})">CateGrIdea</a>
+                            <a class="nav-link" href="@Url.Action("GetNewPost","Idea", new { area ="QAManager"})">CateGrIdea</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Index","User", new { area ="QAManager"})">Users</a>
