--- a/UniversityWebApp/Views/Home/Index.cshtml
+++ b/UniversityWebApp/Views/Home/Index.cshtml
@@ -9,6 +9,11 @@
     .borderless td, .borderless th {
         border: none;
     }
+    a:visited {
+        color: slategrey;
+        text-decoration: none;
+    }
+   
 </style>
 <div class="" style="height:250px;background-color:#F37021;text-align:center;background-image:url(/Data/img/Greenwich-University.jpg);background-position:center;background-size:100%;">
     <p style="position: absolute;
@@ -62,6 +67,7 @@
     }
 </div>
 
-<script type="text/javascript">
-
+<script>
+    $(".mainnav").addClass("fixed-top")
+    $(".mainnav").css("opacity","0.8")
 </script>
