--- a/UniversityWebApp/Areas/QAManager/Views/User/Index.cshtml
+++ b/UniversityWebApp/Areas/QAManager/Views/User/Index.cshtml
@@ -7,6 +7,7 @@
 <div class="container-fluid">
     <div class="card" style="border:0">
         <h4 class="card-header" style="background-color:white">Users managerment</h4>
+        <div>@ViewBag.message</div>
 
         <div class="card-body">
             <div class="form-group" style="">
