--- a/UniversityWebApp/Areas/QAManager/Views/Shared/_Layout.cshtml
+++ b/UniversityWebApp/Areas/QAManager/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="@Url.Action("Index","User", new { area ="QAManager"})">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Hello: @session.Username</a>
+                            <a class="nav-link" href="@Url.Action("Index","Profile", new { area ="QAManager"})">Hello: @session.Username</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Logout","Account", new { area =""})">Log out</a>
